# Enhance fontgrep with performance optimizations and improved output handling
This commit significantly improves the fontgrep tool with several performance optimizations and usability enhancements while maintaining the core functionality and command-line interface.

## Performance Improvements

- **Optimized Filter Ordering**: Reordered filter application to prioritize cheaper operations first:
  - Variable font check (very cheap) runs first
  - Axis filters run early as they often fail quickly
  - Unicode codepoint checks (most expensive) run last
  - Each filter category now has explicit empty checks to avoid unnecessary iterations

- **Fast File Extension Check**: Implemented a dedicated `is_font_file()` function with inline optimization for quicker rejection of non-font files

- **Parallel Processing**: Added multi-threading support using all available CPU cores via `num_cpus::get()` and jwalk's parallel directory traversal

- **Memory Efficiency**: Improved memory handling with proper resource management

## Output and Usability Enhancements

- **Progressive Output**: Added buffered output with periodic flushing (every 10 results) to provide real-time feedback during long-running searches

- **Improved Error Handling**: Enhanced error handling throughout the codebase with proper error propagation

- **Regex Pre-compilation**: Changed name field from `Vec<Regex>` to `Vec<String>` with pre-compilation at startup for better performance and clearer error messages

## Code Structure and Documentation

- **Enhanced Documentation**: Added detailed comments explaining the purpose and behavior of each component

- **Improved Code Organization**: Restructured the code for better readability and maintainability

- **Type Safety**: Added explicit return types and improved error handling patterns

## Technical Details

- Added imports for buffered I/O operations
- Implemented a fixed 64KB buffer size for output
- Simplified the filter_font function with early returns for b

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,22 @@
 [package]
 name = "fontgrep"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2024"
+authors = ["Simon Cozens"]
+description = "Fast CLI tool for searching and filtering font files based on OpenType tables, features, variable font axes and Unicode scripts and characters"
+repository = "https://github.com/simoncozens/fontgrep"
+homepage = "https://github.com/simoncozens/fontgrep"
+documentation = "https://github.com/simoncozens/fontgrep"
+readme = "README.md"
+license = "MIT"
+keywords = ["fonts", "opentype", "typography", "search", "filter"]
+categories = ["command-line-utilities", "text-processing", "graphics"]
 
 [dependencies]
 clap = { version = "4.5.31", features = ["derive"] }
 jwalk = "0.8.1"
 memmap2 = "0.9.5"
+num_cpus = "1.16.0"
 rayon = "1.10.0"
 read-fonts = "0.27.2"
 regex = "1.11.1"
