--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ rayon = "1.10.0"
 read-fonts = "0.27.2"
 regex = "1.11.1"
 skrifa = "0.28.1"
+rusqlite = "0.29.0"
+dirs = "5.0.1"
+chrono = "0.4.31"
+indicatif = { version = "0.17.7", features = ["rayon"] }
