--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ num_cpus = "1.16.0"
 memmap2 = "0.5.10"
 env_logger = "0.11.2"
 log = "0.4.20"
+once_cell = "1.19.0"
 
 [dev-dependencies]
 tempfile = "3.8.0"
