--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      - run: rustup toolchain update nightly && rustup default nightly
       - name: Build
         run: cargo build
       - name: Lint for formatting
