--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,8 +1,9 @@
 name: Benchmark
 on:
   push:
-    branches:
-      - master
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 permissions:
   contents: write
