--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup toolchain update nightly && rustup default nightly
       - name: Run benchmark
-        run: cargo +nightly bench | tee output.txt
+        run: cargo +nightly bench | tee benches/benchmark-output.txt
       # Download previous benchmark result from cache (if exists)
       - name: Download previous benchmark data
         uses: actions/cache@v4
@@ -34,7 +34,7 @@ jobs:
           auto-push: true
           external-data-json-path: ./cache/benchmark-data.json
           # Show alert with commit comment on detecting possible performance regression
-          alert-threshold: "200%"
+          alert-threshold: "20%"
           comment-on-alert: true
           fail-on-alert: true
           summary-always: true
